Bug Fix for misalignment of username on increasing the length of the sidebar

--- a/sass/components/_sidebar-header-dropdown-button.scss
+++ b/sass/components/_sidebar-header-dropdown-button.scss
@@ -10,6 +10,7 @@
         padding: 3px 15px 0 8px;
         position: relative;
         width: 100%;
+        height:42px;
         .team__name {
             font-size: 14px;
             font-weight: 600;
@@ -21,6 +22,7 @@
         }
         .user__name {
             font-weight: 400;
+            position: absolute;
         }
     }
 
